fix for iot row covering other content

--- a/static/css/section/_homepage.scss
+++ b/static/css/section/_homepage.scss
@@ -437,6 +437,7 @@ body.homepage .row--iot {
   background-repeat:  no-repeat;
   overflow: hidden;
   background: #fff;
+  z-index: -5;
 
   @media only screen and (min-width : $breakpoint-medium) {
     padding: 150px 0;
